@@ -3,7 +3,8 @@ package ExtUtils::CBuilder::Platform::VMS;
 use strict;
 use ExtUtils::CBuilder::Base;
 
-use vars qw(@ISA);
+use vars qw($VERSION @ISA);
+$VERSION = '0.12';
 @ISA = qw(ExtUtils::CBuilder::Base);
 
 sub need_prelink { 0 }
