@@ -4,7 +4,8 @@ use strict;
 use File::Spec;
 use ExtUtils::CBuilder::Platform::Unix;
 
-use vars qw(@ISA);
+use vars qw($VERSION @ISA);
+$VERSION = '0.12';
 @ISA = qw(ExtUtils::CBuilder::Platform::Unix);
 
 sub link_executable {
@@ -19,8 +20,7 @@ sub link {
   my ($self, %args) = @_;
 
   $args{extra_linker_flags} = [
-    '-L'.File::Spec->catdir($self->{config}{archlibexp}, 'CORE'),
-    '-lperl',
+    File::Spec->catdir($self->perl_inc(), 'libperl.dll.a'),
     $self->split_like_shell($args{extra_linker_flags})
   ];
 
